--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.0</version>
         <configuration>
+          <useUnlimitedThreads>true</useUnlimitedThreads>
           <systemProperties>
             <property>
               <name>loggerPath</name>
@@ -42,8 +43,6 @@
             </property>
           </systemProperties>
           <argLine>-Xms512m -Xmx1500m</argLine>
-          <parallel>methods</parallel>
-          <forkMode>pertest</forkMode>
         </configuration>
       </plugin>
       <plugin>
@@ -119,7 +118,7 @@
           </execution>
         </executions>
         <configuration>
-          <additionalOptions>-html5</additionalOptions>
+          <additionalOptions>html5</additionalOptions>
         </configuration>
       </plugin>
       <plugin>
