--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>secuconnect-java-sdk</artifactId>
   <packaging>jar</packaging>
   <name>secuconnect-java-sdk</name>
-  <version>1.2.0</version>
+  <version>1.2.1</version>
   <url>https://github.com/secuconnect/secuconnect-java-sdk</url>
   <description>Secuconnect Java</description>
   <scm>
@@ -118,7 +118,11 @@
           </execution>
         </executions>
         <configuration>
-          <additionalOptions>html5</additionalOptions>
+          <additionalOptions>
+            <!-- NEEDS JAVA 9:
+            <additionalOption>-html5</additionalOption>
+            -->
+          </additionalOptions>
         </configuration>
       </plugin>
       <plugin>
