--- a/src/main/config.properties
+++ b/src/main/config.properties
@@ -1,5 +1,6 @@
 host=connect-testing.secupay-ag.de
 port=61614
-replyTo=/temp-queue/main
-baseDestination=/exchange/connect.api/
-contentType=application/json
+reply-to=/temp-queue/main
+base-destination=/exchange/connect.api/
+content-type=application/json
+supported-protocols=TLSv1.2
