--- a/pom.xml
+++ b/pom.xml
@@ -297,6 +297,11 @@
       <version>${gson-version}</version>
     </dependency>
     <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>${jodatime-version}</version>
+    </dependency>
+    <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
       <version>${jaxb-api-version}</version>
@@ -318,11 +323,12 @@
     <java.version>1.7</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <swagger-core-version>1.5.21</swagger-core-version>
+    <swagger-core-version>1.5.22</swagger-core-version>
     <okhttp-version>2.7.5</okhttp-version>
     <gson-version>2.8.5</gson-version>
-    <jaxb-api-version>2.3.0</jaxb-api-version>
-    <activemq-stomp-version>5.15.4</activemq-stomp-version>
+    <jodatime-version>2.10.3</jodatime-version>
+    <jaxb-api-version>2.3.1</jaxb-api-version>
+    <activemq-stomp-version>5.15.9</activemq-stomp-version>
     <junit-version>4.12</junit-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <github.global.server>github</github.global.server>
