--- a/pom.xml
+++ b/pom.xml
@@ -323,6 +323,11 @@
       <artifactId>activemq-stomp</artifactId>
       <version>${activemq-stomp-version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.10.3</version>
+    </dependency>
     <!-- test dependencies -->
     <dependency>
       <groupId>junit</groupId>
