--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
+
   <developers>
     <developer>
       <name>secuconnect</name>
@@ -32,6 +33,7 @@
       <organizationUrl>http://secuconnect.com</organizationUrl>
     </developer>
   </developers>
+
   <distributionManagement>
     <repository>
       <id>internal.repo</id>
@@ -39,6 +41,7 @@
       <url>file://${project.build.directory}/mvn-repo</url>
     </repository>
   </distributionManagement>
+
   <build>
     <plugins>
       <plugin>
@@ -74,19 +77,6 @@
           </execution>
         </executions>
       </plugin>
-      <!-- attach test jar -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.2.0</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
@@ -101,18 +91,6 @@
             <configuration>
               <sources>
                 <source>src/main/java</source>
-              </sources>
-            </configuration>
-          </execution>
-          <execution>
-            <id>add_test_sources</id>
-            <phase>generate-test-sources</phase>
-            <goals>
-              <goal>add-test-source</goal>
-            </goals>
-            <configuration>
-              <sources>
-                <source>src/test/java</source>
               </sources>
             </configuration>
           </execution>
@@ -183,6 +161,7 @@
       </plugin>
     </plugins>
   </build>
+
   <profiles>
     <profile>
       <id>onejar</id>
@@ -286,7 +265,7 @@
     <dependency>
       <groupId>io.swagger.core.v3</groupId>
       <artifactId>swagger-annotations</artifactId>
-      <version>${swagger-core-version}</version>
+      <version>${swagger-annotations-version}</version>
     </dependency>
     <dependency>
       <groupId>com.squareup.okhttp</groupId>
@@ -340,7 +319,7 @@
     <java.version>1.7</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <swagger-core-version>2.1.1</swagger-core-version>
+    <swagger-annotations-version>2.1.2</swagger-annotations-version>
     <okhttp-version>2.7.5</okhttp-version>
     <gson-version>2.8.6</gson-version>
     <gson-fire-version>1.8.4</gson-fire-version>
