--- a/pom.xml
+++ b/pom.xml
@@ -57,14 +57,14 @@
             </property>
           </systemProperties>
           <argLine>-Xms512m -Xmx1500m</argLine>
-          <parallel>methods</parallel>
+          <parallel>classes</parallel>
           <forkMode>pertest</forkMode>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>3.1.2</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -80,7 +80,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.2.0</version>
         <executions>
           <execution>
             <id>add_sources</id>
@@ -99,7 +99,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>3.2.0</version>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -201,7 +201,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
-            <version>3.2.2</version>
+            <version>3.2.4</version>
             <executions>
               <execution>
                 <goals>
@@ -231,7 +231,7 @@
           <plugin>
             <groupId>net.nicoulaj.maven.plugins</groupId>
             <artifactId>checksum-maven-plugin</artifactId>
-            <version>1.8</version>
+            <version>1.9</version>
             <executions>
               <execution>
                 <id>checksum-maven-plugin-files</id>
@@ -305,7 +305,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.10.3</version>
+      <version>2.11.2</version>
     </dependency>
     <!-- test dependencies -->
     <dependency>
@@ -319,13 +319,13 @@
     <java.version>1.7</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <swagger-annotations-version>2.1.2</swagger-annotations-version>
+    <swagger-annotations-version>2.1.4</swagger-annotations-version>
     <okhttp-version>2.7.5</okhttp-version>
     <gson-version>2.8.6</gson-version>
     <gson-fire-version>1.8.4</gson-fire-version>
-    <jodatime-version>2.10.5</jodatime-version>
+    <jodatime-version>2.10.6</jodatime-version>
     <jaxb-api-version>2.3.1</jaxb-api-version>
-    <activemq-stomp-version>5.15.12</activemq-stomp-version>
+    <activemq-stomp-version>5.16.0</activemq-stomp-version>
     <maven-plugin-version>1.0.0</maven-plugin-version>
     <junit-version>4.13</junit-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
