--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>secuconnect-java-sdk</artifactId>
   <packaging>jar</packaging>
   <name>secuconnect-java-sdk</name>
-  <version>3.2.1</version>
+  <version>3.2.4</version>
   <url>https://github.com/secuconnect/secuconnect-java-sdk</url>
   <description>Secuconnect Java</description>
   <scm>
@@ -20,7 +20,7 @@
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -30,7 +30,7 @@
       <name>secuconnect</name>
       <email>info@secuconnect.com</email>
       <organization>secuconnect KG</organization>
-      <organizationUrl>http://secuconnect.com</organizationUrl>
+      <organizationUrl>https://secuconnect.com</organizationUrl>
     </developer>
   </developers>
 
@@ -319,13 +319,13 @@
     <java.version>1.8</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <swagger-annotations-version>2.1.7</swagger-annotations-version>
-    <okhttp-version>4.8.1</okhttp-version>
+    <swagger-annotations-version>2.1.9</swagger-annotations-version>
+    <okhttp-version>4.9.1</okhttp-version>
     <gson-version>2.8.6</gson-version>
-    <gson-fire-version>1.8.4</gson-fire-version>
+    <gson-fire-version>1.8.5</gson-fire-version>
     <jodatime-version>2.10.10</jodatime-version>
     <jaxb-api-version>2.3.1</jaxb-api-version>
-    <activemq-stomp-version>5.16.1</activemq-stomp-version>
+    <activemq-stomp-version>5.16.2</activemq-stomp-version>
     <maven-plugin-version>1.0.0</maven-plugin-version>
     <junit-version>4.13.2</junit-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
