--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.secuconnect</groupId>
   <artifactId>secuconnect-java-sdk</artifactId>
   <packaging>jar</packaging>
   <name>secuconnect-java-sdk</name>
-  <version>3.6.0</version>
+  <version>3.7.0</version>
   <url>https://github.com/secuconnect/secuconnect-java-sdk</url>
   <description>Secuconnect Java</description>
   <scm>
@@ -45,6 +45,7 @@
   <build>
     <plugins>
       <plugin>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
@@ -62,6 +63,7 @@
         </configuration>
       </plugin>
       <plugin>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>3.2.0</version>
@@ -78,6 +80,7 @@
         </executions>
       </plugin>
       <plugin>
+        <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/build-helper-maven-plugin -->
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
         <version>3.2.0</version>
@@ -97,6 +100,7 @@
         </executions>
       </plugin>
       <plugin>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.3.1</version>
@@ -117,6 +121,7 @@
         </configuration>
       </plugin>
       <plugin>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <version>3.2.1</version>
@@ -130,6 +135,7 @@
         </executions>
       </plugin>
       <plugin>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <version>2.8.2</version>
@@ -138,6 +144,7 @@
         </configuration>
       </plugin>
       <plugin>
+        <!-- https://mvnrepository.com/artifact/com.github.github/site-maven-plugin -->
         <groupId>com.github.github</groupId>
         <artifactId>site-maven-plugin</artifactId>
         <version>0.12</version>
@@ -171,6 +178,7 @@
       <build>
         <plugins>
           <plugin>
+            <!-- https://mvnrepository.com/artifact/com.jolira/onejar-maven-plugin -->
             <groupId>com.jolira</groupId>
             <artifactId>onejar-maven-plugin</artifactId>
             <version>1.4.4</version>
@@ -199,6 +207,7 @@
       <build>
         <plugins>
           <plugin>
+            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
             <version>3.2.4</version>
@@ -229,6 +238,7 @@
       <build>
         <plugins>
           <plugin>
+            <!-- https://mvnrepository.com/artifact/net.nicoulaj.maven.plugins/checksum-maven-plugin -->
             <groupId>net.nicoulaj.maven.plugins</groupId>
             <artifactId>checksum-maven-plugin</artifactId>
             <version>1.11</version>
@@ -263,55 +273,65 @@
 
   <dependencies>
     <dependency>
+      <!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
       <groupId>io.swagger.core.v3</groupId>
       <artifactId>swagger-annotations</artifactId>
-      <version>${swagger-annotations-version}</version>
+      <version>2.1.11</version>
     </dependency>
     <dependency>
+      <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
-      <version>${okhttp-version}</version>
+      <version>4.9.3</version>
     </dependency>
     <dependency>
+      <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor -->
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>logging-interceptor</artifactId>
-      <version>${okhttp-version}</version>
+      <version>4.9.3</version>
     </dependency>
     <dependency>
+      <!-- https://mvnrepository.com/artifact/io.gsonfire/gson-fire -->
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>${gson-version}</version>
+      <version>2.8.9</version>
     </dependency>
     <dependency>
+      <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
-      <version>${jaxb-api-version}</version>
+      <version>2.3.1</version>
     </dependency>
     <dependency>
+      <!-- https://mvnrepository.com/artifact/io.gsonfire/gson-fire -->
       <groupId>io.gsonfire</groupId>
       <artifactId>gson-fire</artifactId>
-      <version>${gson-fire-version}</version>
+      <version>1.8.5</version>
     </dependency>
     <dependency>
+      <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
-      <version>${jodatime-version}</version>
+      <version>2.10.13</version>
     </dependency>
     <dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-stomp -->
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-stomp</artifactId>
-      <version>${activemq-stomp-version}</version>
+      <version>5.16.3</version>
     </dependency>
     <dependency>
+      <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.12.5</version>
+      <version>2.13.0</version>
     </dependency>
     <!-- test dependencies -->
     <dependency>
+      <!-- https://mvnrepository.com/artifact/junit/junit -->
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>${junit-version}</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -319,15 +339,6 @@
     <java.version>1.8</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <swagger-annotations-version>2.1.10</swagger-annotations-version>
-    <okhttp-version>4.9.1</okhttp-version>
-    <gson-version>2.8.8</gson-version>
-    <gson-fire-version>1.8.5</gson-fire-version>
-    <jodatime-version>2.10.10</jodatime-version>
-    <jaxb-api-version>2.3.1</jaxb-api-version>
-    <activemq-stomp-version>5.16.3</activemq-stomp-version>
-    <maven-plugin-version>1.0.0</maven-plugin-version>
-    <junit-version>4.13.2</junit-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <github.global.server>github</github.global.server>
   </properties>
