--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>secuconnect-java-sdk</artifactId>
   <packaging>jar</packaging>
   <name>secuconnect-java-sdk</name>
-  <version>3.13.0</version>
+  <version>3.14.0</version>
   <url>https://github.com/secuconnect/secuconnect-java-sdk</url>
   <description>Secuconnect Java</description>
   <scm>
@@ -13,9 +13,6 @@
     <developerConnection>scm:git:git@github.com:secuconnect/secuconnect-java-sdk.git</developerConnection>
     <url>https://github.com/secuconnect/secuconnect-java-sdk</url>
   </scm>
-  <prerequisites>
-    <maven>2.2.0</maven>
-  </prerequisites>
 
   <licenses>
     <license>
@@ -51,22 +48,20 @@
         <version>2.22.2</version>
         <configuration>
           <useUnlimitedThreads>true</useUnlimitedThreads>
-          <systemProperties>
-            <property>
-              <name>loggerPath</name>
-              <value>conf/log4j.properties</value>
-            </property>
-          </systemProperties>
+          <systemPropertyVariables>
+            <loggerPath>conf/log4j.properties</loggerPath>
+          </systemPropertyVariables>
           <argLine>-Xms512m -Xmx1500m</argLine>
           <parallel>classes</parallel>
-          <forkMode>pertest</forkMode>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
         </configuration>
       </plugin>
       <plugin>
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.5.0</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -103,7 +98,7 @@
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.4.0</version>
+        <version>3.5.0</version>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -114,9 +109,7 @@
         </executions>
         <configuration>
           <additionalOptions>
-            <!-- NEEDS JAVA 9:
             <additionalOption>-html5</additionalOption>
-            -->
           </additionalOptions>
         </configuration>
       </plugin>
@@ -138,7 +131,7 @@
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8.2</version>
+        <version>3.1.1</version>
         <configuration>
           <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
         </configuration>
@@ -211,7 +204,7 @@
             <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
-            <version>3.3.0</version>
+            <version>3.4.1</version>
             <executions>
               <execution>
                 <goals>
@@ -278,7 +271,7 @@
       <!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
       <groupId>io.swagger.core.v3</groupId>
       <artifactId>swagger-annotations</artifactId>
-      <version>2.2.1</version>
+      <version>2.2.8</version>
     </dependency>
     <dependency>
       <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
@@ -296,7 +289,7 @@
       <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.9.0</version>
+      <version>2.10.1</version>
     </dependency>
     <dependency>
       <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
@@ -314,19 +307,19 @@
       <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
-      <version>2.10.14</version>
+      <version>2.12.5</version>
     </dependency>
     <dependency>
       <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-stomp -->
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-stomp</artifactId>
-      <version>5.17.1</version>
+      <version>5.18.0</version>
     </dependency>
     <dependency>
       <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.13.3</version>
+      <version>2.14.2</version>
     </dependency>
     <!-- test dependencies -->
     <dependency>
