--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
+        <version>3.1.0</version>
         <configuration>
           <useUnlimitedThreads>true</useUnlimitedThreads>
           <systemPropertyVariables>
@@ -61,7 +61,7 @@
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
-        <version>3.5.0</version>
+        <version>3.6.0</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -78,7 +78,7 @@
         <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/build-helper-maven-plugin -->
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.4.0</version>
         <executions>
           <execution>
             <id>add_sources</id>
@@ -117,7 +117,7 @@
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>3.2.1</version>
+        <version>3.3.0</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -271,19 +271,19 @@
       <!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
       <groupId>io.swagger.core.v3</groupId>
       <artifactId>swagger-annotations</artifactId>
-      <version>2.2.8</version>
+      <version>2.2.10</version>
     </dependency>
     <dependency>
       <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
-      <version>4.10.0</version>
+      <version>4.11.0</version>
     </dependency>
     <dependency>
       <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor -->
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>logging-interceptor</artifactId>
-      <version>4.10.0</version>
+      <version>4.11.0</version>
     </dependency>
     <dependency>
       <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
@@ -313,13 +313,13 @@
       <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-stomp -->
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-stomp</artifactId>
-      <version>5.18.0</version>
+      <version>5.18.1</version>
     </dependency>
     <dependency>
       <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.14.2</version>
+      <version>2.15.2</version>
     </dependency>
     <!-- test dependencies -->
     <dependency>
@@ -332,6 +332,7 @@
   </dependencies>
   <properties>
     <java.version>1.8</java.version>
+    <maven.compiler.release>8</maven.compiler.release>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
